# internal/datastruct/tasks.go
@@ -54,10 +54,10 @@ type DBCreateTaskRequest struct {
 type CreateTaskRequest struct {
 	JWTCreds
 	AssigneeLogin string     `json:"assignee_login" validate:"required" example:"VaKadyk359"`
-	TeamId        int64      `json:"team_id" validate:"required" example:"1"`
 	Subject       string     `json:"subject" validate:"required" example:"service endpoint"`
 	Description   string     `json:"description" validate:"required" example:"add new service endpoint"`
 	Status        TaskStatus `json:"status" validate:"required" example:"todo"`
+	TeamId        int64      `json:"team_id" validate:"required" example:"1"`
 }
 
 type CreateTaskResponse struct {
@@ -75,8 +75,9 @@ type GetTasksRequest struct {
 	Offset        int64      `schema:"offset" example:"0"`
 }
 
-type Task struct {
+type TaskOutput struct {
 	TaskId      int64      `json:"task_id"`
+	Version     int64      `json:"version"`
 	AssigneeId  int64      `json:"assignee_id"`
 	CreatedBy   int64      `json:"created_by"`
 	TeamId      int64      `json:"team_id"`
@@ -89,5 +90,39 @@ type Task struct {
 type GetTasksResponse struct {
 	Status
 	CachedStatus
-	Tasks []Task
+	Tasks []TaskOutput
+}
+
+type TaskUpdatePatch struct {
+	TeamId      string `json:"team_id,omitempty"`
+	Subject     string `json:"subject,omitempty"`
+	Description string `json:"description,omitempty"`
+	Status      string `json:"status,omitempty"`
+	AssigneeId  string `json:"assignee_id,omitempty"`
+}
+
+type DBUpdateTaskRequest struct {
+	JWTCreds
+	TaskId      int64
+	AssigneeId  int64
+	Subject     string
+	Description string
+	Status      TaskStatus
+	TeamId      int64
+	Version     int64
+}
+
+type UpdateTaskRequest struct {
+	JWTCreds
+	TaskId        int64      `json:"task_id" validate:"required" example:"1"`
+	AssigneeLogin string     `json:"assignee_login" validate:"required" example:"VaKadyk359"`
+	Subject       string     `json:"subject" validate:"required" example:"service endpoint"`
+	Description   string     `json:"description" validate:"required" example:"add new service endpoint"`
+	Status        TaskStatus `json:"status" validate:"required" example:"todo"`
+	TeamId        int64      `json:"team_id" validate:"required" example:"1"`
+	Version       int64      `json:"version" validate:"required" example:"1"`
+}
+
+type UpdateTaskResponse struct {
+	Status
 }
